--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       {
         "source": "/lf/(.)",
         "headers": [
-          { "key": "Access-Control-Allow-Origin", "value": "" },
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
           { "key": "Access-Control-Allow-Methods", "value": "GET,PUT,POST,DELETE,PATCH,OPTIONS" },
           { "key": "Access-Control-Allow-Headers", "value": "Content-Type, Authorization" }
         ]
