--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
     "headers": [
       {
         "source": "/lf/(.)",
+        "destination": "/lf/$1",
         "headers": [
           { "key": "Access-Control-Allow-Origin", "value": "*" },
           { "key": "Access-Control-Allow-Methods", "value": "GET,PUT,POST,DELETE,PATCH,OPTIONS" },
